0.03
 - Sort parameters in report.

0.02 2025-11-14T16:06:11+01:00
 - Add ACKNOWLEDGEMENTS section to doc.
 - Sort the output plugins.

0.01 2025-07-02T22:09:03+02:00
 - First version.