@@ -29,7 +29,6 @@ no_index:
 requires:
   Class::Utils: 0
   Cpanel::JSON::XS: 0
-  Error::Pure: 0
   Getopt::Std: 0
   Perl6::Slurp: 0
   perl: 5.6.0
