@@ -1,4 +1,5 @@
 0.03
+ - Rewrite err usage to STDERR and exit 1.
  - Sort parameters in report.
 
 0.02 2025-11-14T16:06:11+01:00
